# SearchSECODatabaseAPI

./: .clang-format  .clang-tidy  .env  .gitignore  .gitlab-ci.yml  .testdata.cql.swp  CMakeLists.txt  CassandraDockerfile  ConnectionHandler_8h_source.html  Database-API_8h_source.html  DatabaseConnection_8h_source.html  DatabaseHandler_8h_source.html  DatabaseRequestHandler_8h_source.html  DatabaseUtility_8h_source.html  Definitions_8h_source.html  Dockerfile  Doxyfile  HTTPStatus_8h_source.html  JobRequestHandler_8h_source.html  JobTypes_8h_source.html  Networking_8h_source.html  PipelineDockerfile  RAFTConsensus_8h_source.html  README.md  RequestHandler_8h_source.html  Statistics_8h_source.html  TestingDockerfile  TestingEntrypoint.sh  Types_8h_source.html  Utility_8h_source.html  annotated.html  annotated_dup.js  cassandra.yaml  classConnectionHandler-members.html  classConnectionHandler.html  classConnectionHandler.js  classDatabaseConnection-members.html  classDatabaseConnection.html  classDatabaseHandler-members.html  classDatabaseHandler.html  (+94 more)
.github/workflows/: gh-pages.yml  testing.yml
Database-API/: .RequestHandler.cpp.swp  CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  Database-API  Database-API.cpp  Database-API.h  DatabaseHandler.cpp  DatabaseHandler.h  DatabaseRequestHandler.cpp  DatabaseRequestHandler.h  Method.h  Project.h  RequestHandler.cpp  RequestHandler.h  Types.h  Utility.cpp  Utility.h
Database-API_Test/: AuthorRequest_test.cpp  CMakeLists.txt  CheckRequest_test.cpp  CheckUploadRequest_test.cpp  ConnectionHandler_tests.cpp  ConnectionMock.cpp  CrawlDataRequest_test.cpp  DatabaseMock.cpp  ExtractProjectsRequest_test.cpp  GetJobRequest_test.cpp  HTTPStatus_test.cpp  IntegrationTests.cpp  JDDatabaseMock.cpp  JobIntegrationTests.cpp  JobRequestHandler_test.cpp  PrevProjectsRequest_test.cpp  RaftConsensusMock.cpp  Raft_tests.cpp  RequestHandlerMock.cpp  RequestHandler_test.cpp  UploadJobRequest_test.cpp  UploadRequest_test.cpp  UploadRequest_tests.cpp  Utility_test.cpp
General/: CMakeLists.txt  ConnectionHandler.cpp  ConnectionHandler.h  Database-API.cpp  Database-API.h  Definitions.h  HTTPStatus.cpp  HTTPStatus.h  RequestHandler.cpp  RequestHandler.h  Utility.cpp  Utility.h
JobDistribution/: DatabaseConnection.cpp  DatabaseConnection.h  JobRequestHandler.cpp  JobRequestHandler.h  Networking.cpp  Networking.h  RAFTConsensus.cpp  RAFTConsensus.h
SearchSECODatabaseAPI/Database-API/: Types.h  (+9 more)
conf/: cassandra-env.sh  cassandra.yaml
html/: DatabaseConnection_8h_source.html  DatabaseHandler_8h_source.html  HTTPStatus_8h_source.html  JobRequestHandler_8h_source.html  Networking_8h_source.html  RAFTConsensus_8h_source.html  RequestHandler_8h_source.html  Statistics_8h_source.html  Types_8h_source.html  annotated.html  classConnectionHandler.html  classDatabaseConnection-members.html  classDatabaseConnection.js  classDatabaseRequestHandler.html  classDatabaseRequestHandler.js  classDatabaseUtility-members.html  classDatabase__API-members.html  classJobRequestHandler.html  classJobRequestHandler.js  classNetworkHandler.html  classNetworkHandler.js  classRequestHandler-members.html  classRequestHandler.html  classRequestHandler.js  classStatistics-members.html  classStatistics.html  classStatistics.js  classTcpConnection-members.html  classTcpConnection.js  classTcpServer-members.html  classTcpServer.html  classTcpServer.js  classUtility-members.html  classes.html  dir_0184503ff309882ddf03c71301f3de4e.html  dir_0cfbfaa453fe53067ca7a01241e0ea7e.html  dir_0cfbfaa453fe53067ca7a01241e0ea7e_dep.map  dir_0cfbfaa453fe53067ca7a01241e0ea7e_dep.md5  dir_62bb455fd97ad163ef86da3ed262c345.js  dir_62bb455fd97ad163ef86da3ed262c345_dep.map  (+43 more)
latex/: ConnectionHandler_8h_source.tex  Database-API_8h_source.tex  DatabaseConnection_8h_source.tex  DatabaseHandler_8h_source.tex  DatabaseRequestHandler_8h_source.tex  DatabaseUtility_8h_source.tex  Definitions_8h_source.tex  HTTPStatus_8h_source.tex  JobRequestHandler_8h_source.tex  JobTypes_8h_source.tex  Networking_8h_source.tex  RAFTConsensus_8h_source.tex  RequestHandler_8h_source.tex  Statistics_8h_source.tex  Types_8h_source.tex  Utility_8h_source.tex  annotated.tex  classConnectionHandler.tex  classDatabaseConnection.tex  classDatabaseHandler.tex  classDatabaseRequestHandler.tex  classDatabaseUtility.tex  classDatabase__API.tex  classJobRequestHandler.tex  classMD5.tex  classNetworkHandler.tex  classRAFTConsensus.tex  classRequestHandler.tex  classStatistics.tex  classTcpConnection.tex  classTcpServer.tex  classUtility.tex  files.tex  hierarchy.tex  md5_8h_source.tex  md_README.tex  refman.tex  structConnection.tex  structjobTypes_1_1FailedJob.tex  structjobTypes_1_1Job.tex  (+7 more)
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_5.js  all_a.js  all_b.js  all_c.js  all_f.js  classes_0.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_a.js  functions_0.js  functions_2.js  functions_3.js  functions_6.js  functions_a.js  functions_d.js  searchdata.js
tests/: AuthorRequest_test.cpp  CMakeLists.txt  CheckRequest_test.cpp  CheckUploadRequest_test.cpp  ConnectionHandler_tests.cpp  ConnectionMock.cpp  CrawlDataRequest_test.cpp  ExtractProjectsRequest_test.cpp  GetIPs_test.cpp  GetJobRequest_test.cpp  IntegrationTests.cpp  JDDatabaseMock.cpp  JobIntegrationTests.cpp  JobRequestHandler_test.cpp  PrevProjectsRequest_test.cpp  RaftConsensusMock.cpp  Raft_test.cpp  RequestHandlerMock.cpp  RequestHandler_test.cpp  StatisticsMock.cpp  TestDefinitions.h  UploadJobRequest_test.cpp  UploadRequest_test.cpp  Utility_test.cpp
tests/Database-API/: AuthorRequest_test.cpp  CheckRequest_test.cpp  CheckUploadRequest_test.cpp  DatabaseMock.cpp  IntegrationTests.cpp  PrevProjectsRequest_test.cpp  UploadRequest_test.cpp
tests/General/: RequestHandler_test.cpp  StatisticsMock.cpp  TestDefinitions.h
tests/JobDistribution/: FinishJobRequest_test.cpp  GetJobRequest_test.cpp  JDDatabaseMock.cpp  JobIntegrationTests.cpp  RaftConsensusMock.cpp  Raft_test.cpp  UpdateJobRequest_test.cpp  UploadJobRequest_test.cpp
(+48 files in other folders)
