# CMakeList.txt : CMake project for Database-API, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
#add_executable (General "ConnectionHandler.cpp" "Database-API.cpp" "Database-API.h" "RequestHandler.cpp")
#add_library(General-library "Database-API.cpp" "Database-API.h" "ConnectionHandler.cpp" "RequestHandler.cpp")


#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -lboost_system")

#include_directories(../Resources/include)
#target_link_libraries(General /usr/lib/x86_64-linux-gnu/libcassandra.so.2.15.3)



